kube/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault-lego
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: vault-lego
    spec:
      containers:
      - name: vault-lego
        image: catac/vault-lego:v0.0.7
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
