kube/vault.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: "vault:0.8.3"
          resources:
            requests:
              cpu: 300m
              memory: 1000Mi
            limits:
              cpu: 300m
              memory: 1500Mi
          ports:
          - containerPort: 8200
            name: main-port
          readinessProbe:
            httpGet:
              # "leader" returns a 503 for a sealed vault, which is basically what we want
              path: /v1/sys/leader
              port: 8200
            initialDelaySeconds: 10
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  ports:
  - port: 8200
    protocol: TCP
    targetPort: 8200
  selector:
    app: vault
